Fixed image selection & color palette shoing wrong color (#8)
I made the images unselectable
previous: https://imgur.com/a/rME4RFo
with my commit: https://imgur.com/a/ROVPBos

And i fixed the color pallete text showing the wrong color
previous: https://imgur.com/a/yMRMZ04
with my commit: https://imgur.com/a/4dmDTBG

--- a/style.css
+++ b/style.css
@@ -158,12 +158,23 @@ small {
   display: block;
   padding: 5rem 0 3rem;
   color: var(--sd-logo-color);
+  
+  -webkit-user-select: none; /* Safari */        
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
 }
+
 .page-logo > svg {
   display: block;
   width: 12.625em;
   height: auto;
   margin: 0 auto;
+    
+  -webkit-user-select: none; /* Safari */        
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
 }
 
 .palette {
@@ -173,6 +184,12 @@ small {
 
 .brand-white {
   background-color: var(--sd-brand-white);
+    
+  
+  -webkit-user-select: none; /* Safari */        
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
 }
 
 .brand-green {
@@ -183,6 +200,12 @@ small {
 .brand-black {
   background-color: var(--sd-brand-black);
   color: var(--sd-brand-white);
+    
+  
+  -webkit-user-select: none; /* Safari */        
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
 }
 @media (prefers-color-scheme: dark) {
   .brand-black {
@@ -221,4 +244,11 @@ footer {
   padding: 3em 0 3em;
   font-size: 1em;
   margin-top: 4rem;
+}
+
+
+#clb{
+ background-color: var(--sd-brand-black);
+ border: 1px solid var(--sd-gray-extralight);
+ color: var(--sd-gray-extralight);
 }
